# mcp-flight

./: .gitignore  README.md  env.example  mcp_server.py  pyproject.toml
data/: documents_checklist.txt  seasons_guide.txt
src/application/dto/: city_dto.py  flight_dto.py
src/application/services/: city_application_service.py  flight_application_service.py
src/domain/: __init__.py
src/domain/entities/: city.py  flight.py
src/domain/exceptions/: flight_exceptions.py
src/domain/gateways/: __init__.py  city_gateway.py  flight_gateway.py
src/domain/services/: flight_search_service.py
src/domain/vo/: coordinates.py  location_code.py  search_params.py
src/infrastructure/: __init__.py  container.py
src/infrastructure/config/: settings.py
src/infrastructure/gateways/: __init__.py  amadeus_city_gateway.py  amadeus_flight_gateway.py
src/presentation/mcp/: __init__.py  prompts.py  resources.py  tools.py
src/presentation/templates/: flight_search_prompt.j2  vacation_prompt.j2
