[project]
name = "mcp-flight"
version = "0.1.0"
description = "MCP Flight Search Service - Arquitetura DDD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
mcp-flight = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
include = ["src"]
pythonPath = "src"

[tool.pylsp-mypy]
enabled = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"